--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,8 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  width: calc(100vw - 2rem) ;
+  height: calc(100vh - 4rem);
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
