--- a/src/style.css
+++ b/src/style.css
@@ -63,11 +63,8 @@ button:focus-visible {
 }
 
 #app {
-  width: calc(100vw - 2rem);
-  height: calc(100vh - 4rem);
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 @media (prefers-color-scheme: light) {
